--- a/web/index.html
+++ b/web/index.html
@@ -55,7 +55,7 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
           <a class="dropdown-item" href="#">Settings</a>
-          <a class="dropdown-item" href="#">Activity Log</a>
+          <a class="dropdown-item" href="mypage.html">마이페이지</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">로그아웃</a>
         </div>
@@ -73,7 +73,7 @@
         <header class="jumbotron my-4">
           <h3 class="display-4">헤더 만들었쓔~!</h3>
           <p class="lead">앱에 대한 설명쓰면 괜찮을 둡..</p>
-          <a href="login.html" class="btn btn-primary btn-lg">더보기</a>
+          <a href="index2.html" class="btn btn-primary btn-lg">더보기</a>
         </header>
 
         <div class="col-lg-9 mx-auto mt-5">
@@ -197,7 +197,7 @@
                 </table>
               </div>
               <!-- /.table-responsive -->
-              <a class="btn btn-primary btn-block color-palette" href="index.html">더보기</a>
+              <a class="btn btn-primary btn-block color-palette" href="index2.html">더보기</a>
             </div>
             <!-- /.panel-body -->
           </div>
